k8s/deployment-production.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: server
  labels:
    app: server
    environment: production
spec:
  selector:
    matchLabels:
      app: server
      environment: production
  template:
    metadata:
      labels:
        app: server
        environment: production
    spec:
      containers:
        - name: mangaroo-server
          image: <IMAGE>
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
          volumeMounts:
            - name: dbcert
              mountPath: /app/certs
              readOnly: true
      volumes:
        - name: dbcert
          secret:
            secretName: db-cert
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: server
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 4000
  selector:
    app: server
    environment: production
