k8s/deployment-staging.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-staging
  namespace: server
  labels:
    app: server
    environment: staging
spec:
  selector:
    matchLabels:
      app: server
      environment: staging
  template:
    metadata:
      labels:
        app: server
        environment: staging
    spec:
      containers:
        - name: mangaroo-server
          image: <IMAGE>
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
          volumeMounts:
            - name: dbcert
              mountPath: /app/certs
              readOnly: true
            - name: multipart-cache
              mountPath: /app/tmp/multipart_cache
      volumes:
        - name: dbcert
          secret:
            secretName: db-cert
        - name: multipart-cache
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: server-staging
  namespace: server
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 4000
  selector:
    app: server
    environment: staging
