k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server
  namespace: server
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - api.mangaroo.moe
        - staging-api.mangaroo.moe
      secretName: server-tls
  rules:
    - host: "api.mangaroo.moe"
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: server
              port:
                number: 80
    - host: "staging-api.mangaroo.moe"
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: server-staging
              port:
                number: 80
